tests/grammar/valid/core-pull-share-01.vit
use .dep as dep


proc main() -> i32 {
  give 0
}
