tests/grammar/invalid/entry-block-pull-01.vit
entry main at core/app {
  pull .dep as dep
  give 0
}
